--- a/src/components/AddPersonForm/AddPersonForm.module.css
+++ b/src/components/AddPersonForm/AddPersonForm.module.css
@@ -1,9 +1,22 @@
 .Input {
   margin: 1rem 3rem;
+  border: 0px;
+  border-radius: 2rem;
+  text-align: center;
 }
 .Form {
   text-align: center;
   display: flex;
   justify-content: space-around;
   flex-direction: row;
+}
+.Button {
+  width: 7rem;
+  margin: 0 auto;
+  border-radius: 2rem;
+  transition: 0.3s;
+}
+.Button:hover {
+  background-color: #143d59;
+  color: white;
 }
